* fix spacing

--- a/src/scss/main-event-list/main-event-list.scss
+++ b/src/scss/main-event-list/main-event-list.scss
@@ -35,5 +35,5 @@
   margin: -5px 0 0 -5px;
   border: 10px solid color('red');
 
-  margin-left: -65px - 130px; // временный хак
+  margin-left: -130px * 1;
 }
