--- a/src/scss/main-events/main-events.scss
+++ b/src/scss/main-events/main-events.scss
@@ -15,6 +15,7 @@
   display: flex;
   flex-flow: column;
   justify-content: flex-end;
+  overflow: hidden;
 }
 
 .main-events__image {
